﻿shmuel 30.12.2019 16:05:03 +0200 - build 721

1. A fix in GetOpenPanelInfo() for LuaMacro panel modules.

2. LuaFAR: minor refactoring.

shmuel 29.12.2019 18:35:07 +0200 - build 720

1. LuaFAR: a minor fix in MakeDirectoryW.

shmuel 16.12.2019 14:23:15 +0200 - build 719

1. LuaFAR: fix utf8.charpattern.

shmuel 08.12.2019 09:31:15 +0200 - build 718

1. Refactor build 717.

shmuel 07.12.2019 23:34:24 +0200 - build 717

1. Regular macros: functions condition() and action() receive an additional argument - a table.
   This table can be used for keeping and modifying data that are private to the macro.
   It is initialized by the content of a table-argument received by function Macro.

2. Regular macros: arbitrary non-standard fields are allowed, they will be copied to the table
   described in the above paragraph.

shmuel 04.12.2019 18:01:32 +0200 - build 716

1. LuaFAR: far.GetMsg() accepts the optional 2-nd parameter (PluginId).

shmuel 23.11.2019 19:16:02 +0200 - build 715

1. LuaFAR: far.RecursiveSearch():
   Extend syntax of "Mask" parameter to optionally include file attributes after >> delimiter.

shmuel 30.10.2019 22:19:18 +0200 - build 714

1. Support throwing Lua errors from macro-API code in Far.exe (starting from build 5502).

shmuel 26.10.2019 21:11:29 +0200 - build 713

1. LuaFAR: a fix in win.IsWinVersion().

shmuel 26.10.2019 17:01:59 +0200 - build 712

1. LuaFAR: added function win.IsWinVersion().

shmuel 21.10.2019 11:43:16 +0200 - build 711

1. Panel.Item(X,Idx,10) - property 'SortGroup' - returns again a number rather than a boolean.
   Returning a boolean was a bug.

shmuel 20.10.2019 13:08:07 +0200 - build 710

1. Panel.Item(X,Idx,8) and Panel.Item(X,Idx,10) given invalid Idx returned 0 now they return false.

shmuel 17.10.2019 08:28:50 +0200 - build 709

1. LuaFAR: make return value of DN_KILLFOCUS 1-based and refactor function ProcessDNResult().

shmuel 12.10.2019 13:45:55 +0200 - build 708

1. LuaFAR: cosmetic changes.
